rtest/tests/jsr335/Semantics/ConstructorReferenceAnalysis/ArrayReferences/ShouldCompile/syntax04/Test.java
// .result=COMPILE_PASS
import java.util.*;

public class Test {
	
	interface A {
		String[][] m(short i);
	}
	
	public static void main(String[] arg) {
		A a = String[][]::new;
	}
}