rtest/tests/jsr335/Semantics/ConstructorReferenceAnalysis/ArrayReferences/ShouldFail/syntax10/Test.java
// .result=COMPILE_FAIL
import java.util.*;


public class Test {
	
	interface A {
		int[][] m(int i);
	}
	
	public static void main(String[] arg) {
		if(int[][]::new == null) {
			
		}
	}

}